# LiveStreamClient

./: .gitignore  CMakeLists.txt  README.md  brainsBehindScreenshot.cpp  brainsBehindScreenshot.h  main.cpp
includes/: BitmapConverter.h  BrainsBehindScreenshot.h  WebSocketClient.h  WebSocketConnection.h  server.h  websocket.h  websocket_client.h
includes/api/: WebSocketClient.h
includes/enums/: Commands.h  MessageFormat.h
src/: BitmapConverter.cpp  BrainsBehindScreenshot.cpp
src/api/: Server.cpp  WebSocketClient.cpp  WebSocketConnection.cpp  server.cpp  websocket.cpp  websocket_client.cpp
src/api/rest/: server.cpp
